[gd_scene load_steps=7 format=3 uid="uid://bmit6xykpck7u"]

[ext_resource type="Script" path="res://Scripts/MenuButton.gd" id="3_vfdue"]
[ext_resource type="PackedScene" uid="uid://b238swtg4xiqq" path="res://FrameView.tscn" id="4_0q5o4"]
[ext_resource type="FontFile" uid="uid://bywegilh4yodo" path="res://IMPACT.TTF" id="4_wxax8"]
[ext_resource type="Script" path="res://Scripts/Animation.gd" id="5_msl3s"]
[ext_resource type="PackedScene" uid="uid://bw0kgyu2tyfk" path="res://t_slider.tscn" id="5_oxkbe"]
[ext_resource type="PackedScene" uid="uid://dt3obothpbm14" path="res://t_layer.tscn" id="6_yjky3"]

[node name="Main" type="Node2D"]

[node name="Brush_Settings" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Brush_Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="MenuButton" type="MenuButton" parent="Brush_Settings"]
layout_mode = 0
offset_left = 1472.0
offset_top = 3.0
offset_right = 1536.0
offset_bottom = 34.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("4_wxax8")
theme_override_font_sizes/font_size = 20
text = "File"
flat = false
item_count = 2
popup/item_0/text = "Blank"
popup/item_0/id = 0
popup/item_1/text = "Save"
popup/item_1/id = 1
script = ExtResource("3_vfdue")

[node name="FileDialog" type="FileDialog" parent="Brush_Settings/MenuButton"]
size = Vector2i(392, 162)
show_hidden_files = true

[node name="BrushColor" type="ColorPicker" parent="Brush_Settings"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -464.0
offset_top = -418.0
offset_right = -72.0
offset_bottom = 126.0
grow_horizontal = 0
grow_vertical = 2
color_modes_visible = false
sliders_visible = false

[node name="BrushSize" type="HSlider" parent="Brush_Settings"]
layout_mode = 0
offset_left = 1304.0
offset_top = 34.0
offset_right = 1464.0
offset_bottom = 58.0
min_value = 1.0
max_value = 50.0
value = 10.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="Label" type="Label" parent="Brush_Settings"]
layout_mode = 0
offset_left = 1344.0
offset_top = 560.0
offset_right = 1528.0
offset_bottom = 616.0
theme_override_fonts/font = ExtResource("4_wxax8")
theme_override_font_sizes/font_size = 40
text = "Q-new frame; W-delete frame
A-backwards; S-forward
Z-erase last line"

[node name="DrawingArea" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
offset_left = 16.0
offset_top = 16.0
offset_right = 1296.0
offset_bottom = 736.0
mouse_default_cursor_shape = 3

[node name="SubViewport" type="SubViewport" parent="DrawingArea"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="1" parent="DrawingArea/SubViewport" instance=ExtResource("4_0q5o4")]
visible = false

[node name="Animation" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 752.0
offset_right = 1288.0
offset_bottom = 1080.0
script = ExtResource("5_msl3s")

[node name="PlayAnim" type="Timer" parent="Animation"]

[node name="TimelineSettings" type="Control" parent="Animation"]
anchors_preset = 0
offset_left = 1.0
offset_top = -16.0
offset_right = 1296.0
offset_bottom = 28.0

[node name="Fps_Counter" type="Label" parent="Animation/TimelineSettings"]
layout_mode = 0
offset_left = 7.0
offset_top = 16.0
offset_right = 47.0
offset_bottom = 42.0
text = "FPS:"

[node name="Run_FPS" type="SpinBox" parent="Animation/TimelineSettings/Fps_Counter"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
offset_left = 31.0
offset_top = -1.0
offset_right = 103.0
offset_bottom = 25.0
max_value = 120.0
value = 24.0
alignment = 1
update_on_text_changed = true

[node name="Current_Fps" type="Label" parent="Animation/TimelineSettings"]
layout_mode = 2
offset_left = 127.0
offset_top = 15.0
offset_right = 222.0
offset_bottom = 41.0
text = "Current:"

[node name="SpinBox" type="SpinBox" parent="Animation/TimelineSettings/Current_Fps"]
layout_mode = 0
offset_left = 64.0
offset_right = 147.063
offset_bottom = 31.0
min_value = 1.0
max_value = 750.0
value = 1.0
alignment = 1
editable = false
update_on_text_changed = true

[node name="ScrollContainer" type="ScrollContainer" parent="Animation"]
layout_mode = 2
offset_left = 1.0
offset_top = 28.0
offset_right = 1296.0
offset_bottom = 328.0
grow_horizontal = 2
grow_vertical = 2

[node name="Anim_Layers" type="VBoxContainer" parent="Animation/ScrollContainer"]
clip_contents = true
layout_mode = 2

[node name="TSlider" parent="Animation/ScrollContainer/Anim_Layers" instance=ExtResource("5_oxkbe")]
layout_mode = 2

[node name="TLayer" parent="Animation/ScrollContainer/Anim_Layers" instance=ExtResource("6_yjky3")]
layout_mode = 2

[connection signal="confirmed" from="Brush_Settings/MenuButton/FileDialog" to="Brush_Settings/MenuButton" method="_on_file_dialog_confirmed"]
[connection signal="timeout" from="Animation/PlayAnim" to="." method="_on_timer_timeout"]
